--- a/app/src/main/res/layout/activity_wx_imagepicker.xml
+++ b/app/src/main/res/layout/activity_wx_imagepicker.xml
@@ -8,7 +8,7 @@
     android:padding="16dp">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
