--- a/app/src/main/res/layout/activity_base_handler_main.xml
+++ b/app/src/main/res/layout/activity_base_handler_main.xml
@@ -21,13 +21,27 @@
                 android:layout_height="wrap_content"
                 android:background="@color/bg_public"
                 android:padding="12dp"
-                android:text="@string/auto_scroll_question_1" />
+                android:text="@string/handler_question_1" />
 
             <com.transcendence.blackhole.widget.custom.autoscroll.MarqueeTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
-                android:text="@string/handler_answer_1" />
+                android:text="@string/handler_answer_1"  />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/bg_public"
+                android:padding="12dp"
+                android:text="@string/handler_question_2" />
+
+            <com.transcendence.blackhole.widget.custom.autoscroll.MarqueeTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:text="@string/handler_answer_2"  />
         </LinearLayout>
 
     </ScrollView>
