--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -16,12 +16,20 @@
 -->
 <resources>
     <string-array name="app_index_item">
-        <item>Activity的生命周期</item>
+        <item>开发基础</item>
         <item>仿微信imagePicker</item>
         <item>安卓巴士demo</item>
         <item>Main</item>
         <item>鸣谢</item>
         <item>Toast</item>
+        <item>仿地图上拉控件</item>
+    </string-array>
+
+    <string-array name="base_index_item">
+        <item>Activity的生命周期</item>
+        <item>启动模式</item>
+        <item>Tel Info</item>
+        <item>什么是Handler</item>
     </string-array>
 
     <string-array name="index_item">
