--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -18,11 +18,14 @@
     <string-array name="app_index_item">
         <item>开发基础</item>
         <item>仿微信imagePicker</item>
+        <item>Video序列</item>
         <item>安卓巴士demo</item>
         <item>Main</item>
         <item>鸣谢</item>
         <item>Toast</item>
         <item>仿地图上拉控件</item>
+        <item>判断双SD卡</item>
+
     </string-array>
 
     <string-array name="base_index_item">
@@ -31,6 +34,13 @@
         <item>Tel Info</item>
         <item>什么是Handler</item>
     </string-array>
+
+    <string-array name="voice_index_item">
+        <item>仿微信的录音功能1</item>
+        <item>仿微信的录音功能2</item>
+    </string-array>
+
+
 
     <string-array name="index_item">
         <item>Main</item>
