--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
         android:clickable="true"
         app:leftText="画版"
         app:rightText="右"
-        app:leftIcon="@mipmap/zuimei_ic_mine_portrait"
+        app:leftIcon="@mipmap/ic_swan"
         />
 
     <com.transcendence.blackhole.widget.custom.StandardLayout
@@ -104,7 +104,7 @@
         android:clickable="true"
         app:leftText="标准栏"
         app:rightText="右"
-        app:leftIcon="@mipmap/zuimei_ic_mine_portrait"
+        app:leftIcon="@mipmap/ic_swan"
         />
 
     <com.transcendence.blackhole.widget.custom.StandardLayout
