--- a/app/src/main/res/layout/activity_widget_standard_layout.xml
+++ b/app/src/main/res/layout/activity_widget_standard_layout.xml
@@ -16,6 +16,6 @@
         android:layout_marginTop="@dimen/standard_padding"
         android:clickable="true"
         app:leftText="左"
-        app:leftIcon="@mipmap/zuimei_ic_mine_portrait"
+        app:leftIcon="@mipmap/ic_swan"
         />
 </LinearLayout>
