--- a/stackOverView/src/main/res/values/alias.xml
+++ b/stackOverView/src/main/res/values/alias.xml
@@ -46,7 +46,7 @@
     <!-- Alias used to reference framework configuration for translucent decor.  -->
     <item type="bool" name="config_enableLockScreenTranslucentDecor">true</item>
 
-    <!-- Alias used to reference framework activity duration.  -->
+    <!-- Alias used to reference framewuivity duration.  -->
     <item type="integer" name="config_activityDefaultDur">@*android:integer/config_activityDefaultDur</item>
 
 </resources>
