--- a/app/src/main/res/layout/activity_base_handler_main.xml
+++ b/app/src/main/res/layout/activity_base_handler_main.xml
@@ -42,6 +42,50 @@
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:text="@string/handler_answer_2"  />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/bg_public"
+                android:padding="12dp"
+                android:text="3 使用handler更新背景图片" />
+
+            <com.transcendence.blackhole.widget.custom.autoscroll.MarqueeTextView
+                android:id="@+id/tvhandler3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:text="点击进入"  />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/bg_public"
+                android:padding="12dp"
+                android:text="4 handler sendMessage" />
+
+            <com.transcendence.blackhole.widget.custom.autoscroll.MarqueeTextView
+                android:id="@+id/tvhandler4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:text="点击进入"  />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/bg_public"
+                android:padding="12dp"
+                android:text="@string/handler_question_5" />
+
+            <com.transcendence.blackhole.widget.custom.autoscroll.MarqueeTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:text="@string/handler_answer_5"  />
         </LinearLayout>
 
     </ScrollView>
