--- a/app/src/main/res/layout/activity_base_handler_main.xml
+++ b/app/src/main/res/layout/activity_base_handler_main.xml
@@ -86,6 +86,19 @@
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:text="@string/handler_answer_5"  />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/bg_public"
+                android:padding="12dp"
+                android:text="@string/handler_question_6" />
+
+            <com.transcendence.blackhole.widget.custom.autoscroll.MarqueeTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:text="@string/handler_answer_6"  />
         </LinearLayout>
 
     </ScrollView>
