add lifecycle png

--- a/app/src/main/res/layout/activity_wx_imagepicker.xml
+++ b/app/src/main/res/layout/activity_wx_imagepicker.xml
@@ -18,5 +18,5 @@
         android:scrollbarStyle="outsideOverlay"
         app:layoutManager="android.support.v7.widget.GridLayoutManager"
         app:spanCount="4"
-        tools:listitem="@layout/list_item_image"/>
+        tools:listitem="@layout/activity_wx_imagepicker_list_item_image"/>
 </RelativeLayout>
