--- a/app/src/main/res/layout/activity_life_cycle.xml
+++ b/app/src/main/res/layout/activity_life_cycle.xml
@@ -3,9 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/bg_public"
+    android:padding="@dimen/standard_padding"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_marginBottom="@dimen/standard_padding"
+        android:src="@mipmap/activity_basic_lifecycle"
+        />
 
 
     <ListView
