--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,14 @@
 
     <color name="small_circle_color_blue">#139AC8</color>
     <color name="small_circle_color_yellow">#F0FF2F</color>
+
+
+
+    <!-- shopCar -->
+    <color name="title_red">#fc404e</color>
+    <color name="bj">#efeff4</color>
+    <color name="xian">#ecedef</color>
+    <color name="gray">#888888</color>
+    <color name="gray1">#f8f8f8</color>
+
 </resources>
