--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -19,15 +19,14 @@
     <string-array name="app_index_item">
         <item>开发基础</item>
         <item>抽奖</item>
+        <item>跑马灯序列</item>
+        <item>其他序列</item>
         <item>仿微信imagePicker</item>
         <item>Video序列</item>
         <item>安卓巴士demo</item>
         <item>Main</item>
         <item>鸣谢</item>
         <item>Toast</item>
-        <item>仿地图上拉控件</item>
-        <item>判断双SD卡</item>
-        <item>课程表</item>
     </string-array>
 
     <string-array name="base_index_item">
@@ -43,11 +42,20 @@
         <item>抽奖3</item>
     </string-array>
 
-    <string-array name="voice_index_item">
-        <item>仿微信的录音功能1</item>
-        <item>仿微信的录音功能2</item>
+
+    <string-array name="marquee_index_item">
+        <item>跑马灯1</item>
+        <item>跑马灯2</item>
+        <item>跑马灯3</item>
     </string-array>
 
+    <string-array name="other_index_item">
+        <item>仿地图上拉控件</item>
+        <item>判断双SD卡</item>
+        <item>课程表</item>
+        <item>瀑布流</item>
+        <item>解决软键盘遮挡输入框</item>
+    </string-array>
 
 
     <string-array name="index_item">
@@ -57,7 +65,10 @@
     </string-array>
 
 
-
+    <string-array name="voice_index_item">
+        <item>仿微信的录音功能1</item>
+        <item>仿微信的录音功能2</item>
+    </string-array>
 
     <string-array name="jifeng_array_info">
         <item name="huawei_mobile">华为荣耀5C</item>
