--- a/app/src/main/res/layout/activity_life_cycle.xml
+++ b/app/src/main/res/layout/activity_life_cycle.xml
@@ -10,6 +10,7 @@
 
 
     <ImageView
+        android:id="@+id/ivImg"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginBottom="@dimen/standard_padding"
