--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -27,6 +27,7 @@
         <item>鸣谢</item>
         <item>Toast</item>
         <item>Mvp</item>
+        <item>Retrofit</item>
     </string-array>
 
 
