--- a/app/src/main/res/layout/activity_imageload.xml
+++ b/app/src/main/res/layout/activity_imageload.xml
@@ -2,46 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/bg_public"
     android:orientation="vertical"
-    android:padding="@dimen/standard_padding"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:padding="@dimen/standard_padding">
 
-    <ImageView
-        android:id="@+id/ivImg"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="@dimen/standard_padding"
-        android:gravity="center"
-        android:background="@drawable/water_standard_green_selector"
-        android:text="加载网络图片" />
+            <ImageView
+                android:id="@+id/ivImg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="@dimen/standard_padding"
-        android:gravity="center"
-        android:background="@drawable/water_standard_green_selector"
-        android:text="加载工程图片" />
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="@dimen/standard_padding"
+                style="@style/standardGreenButton"
+                android:gravity="center"
+                android:text="加载网络图片" />
 
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="@dimen/standard_padding"
-        android:gravity="center"
-        android:background="@drawable/water_standard_green_selector"
-        android:text="加载本地图片" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="@dimen/standard_padding"
+                style="@style/standardGreenButton"
+                android:gravity="center"
+                android:text="加载工程图片" />
+
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="@dimen/standard_padding"
+                style="@style/standardGreenButton"
+                android:gravity="center"
+                android:text="加载本地图片" />
+        </LinearLayout>
+
+
+    </ScrollView>
 
 </LinearLayout>
