--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -2,22 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dp_10"
-    >
+    android:padding="@dimen/dp_10">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:textColor="@color/text_33"
-        />
+        android:scrollbars="none">
+
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:textColor="@color/text_33" />
 
     </ScrollView>
 </LinearLayout>
