--- a/app/src/main/res/layout/activity_button_jianbian.xml
+++ b/app/src/main/res/layout/activity_button_jianbian.xml
@@ -10,6 +10,7 @@
 
 
     <TextView
+        android:id="@+id/tvTabOne"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="@dimen/standard_padding"
@@ -22,6 +23,7 @@
 
 
     <TextView
+        android:id="@+id/tvTabTwo"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="@dimen/standard_padding"
@@ -33,6 +35,7 @@
         android:text="放射 ripple" />
 
     <TextView
+        android:id="@+id/tvTabThree"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="@dimen/standard_padding"
