--- a/app/src/main/res/layout/activity_mvp_beauty_list_item.xml
+++ b/app/src/main/res/layout/activity_mvp_beauty_list_item.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ivImg"
-    android:orientation="vertical"
-    android:scaleType="fitXY"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:scaleType="fitXY">
 
 
 </ImageView>
