--- a/app/src/main/res/layout/activity_other_github_contrbution.xml
+++ b/app/src/main/res/layout/activity_other_github_contrbution.xml
@@ -9,11 +9,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <com.transcendence.blackhole.demo.activation.view.GitHubContributionView
-        android:id="@+id/custom"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        />
+        <com.transcendence.blackhole.demo.activation.view.GitHubContributionView
+            android:id="@+id/custom"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
