--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -82,6 +82,7 @@
         <item>仿地图上拉控件</item>
         <item>解决软键盘遮挡输入框</item>
         <item>仿GitHub的提交活跃表格</item>
+        <item>全APP</item>
     </string-array>
 
 
