--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -9,6 +9,7 @@
         android:id="@+id/ivLauncher"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@mipmap/beauty09"
         android:scaleType="fitXY" />
 
 </android.support.constraint.ConstraintLayout>
