--- a/app/src/main/res/layout/activity_mvp_beauty_list.xml
+++ b/app/src/main/res/layout/activity_mvp_beauty_list.xml
@@ -8,13 +8,12 @@
     android:layout_height="match_parent">
 
 
-
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        tools:listitem="@layout/activity_mvp_beauty_list_item"
         />
+
 
 </LinearLayout>
