--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -83,6 +83,7 @@
         <item>解决软键盘遮挡输入框</item>
         <item>仿GitHub的提交活跃表格</item>
         <item>全APP</item>
+        <item>Behavior</item>
     </string-array>
 
 
