--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -88,6 +88,7 @@
         <item>全APP</item>
         <item>Behavior</item>
         <item>Segment</item>
+        <item>XiaoMI</item>
     </string-array>
 
 
