--- a/app/src/main/res/layout/activity_scroll_meituan_main.xml
+++ b/app/src/main/res/layout/activity_scroll_meituan_main.xml
@@ -27,7 +27,7 @@
                 android:orientation="vertical" >
 
                 <ImageView
-                    android:id="@+id/iamge"
+                    android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/scrollview_meituan_pic"
