--- a/wan/src/main/res/layout/fragment_search_history.xml
+++ b/wan/src/main/res/layout/fragment_search_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +15,7 @@
         android:textColor="@color/colorGitHubGreen"
         android:textSize="@dimen/standard_padding" />
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvHot"
         android:layout_width="match_parent"
@@ -27,6 +29,7 @@
         tools:layoutManager="GridLayoutManager"
         tools:listitem="@layout/fragment_search_history_rv_searchhot_item"
         tools:spanCount="3" />
+
 
     <LinearLayout
         android:id="@+id/ll_history"
@@ -43,8 +46,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="16dp"
                 android:text="历史搜索"
                 android:textColor="@color/colorGitHubGreen"
                 android:textSize="@dimen/standard_padding" />
@@ -73,5 +76,10 @@
             tools:listitem="@layout/fragment_search_history_rv_searchhistory_item" />
 
     </LinearLayout>
+
+
+
+
+
 
 </LinearLayout>
