--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -79,6 +79,7 @@
         <item>仿地图上拉控件</item>
         <item>美团锚定控件</item>
         <item>PullToZoom</item>
+        <item>CatchesMap</item>
     </string-array>
 
     <!-- index 7-->
@@ -89,6 +90,7 @@
         <item>Behavior</item>
         <item>Segment</item>
         <item>XiaoMI</item>
+        <item>滴滴Splash</item>
     </string-array>
 
 
