--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -49,6 +49,7 @@
         <item>imageLoad</item>
         <item>jGallery</item>
         <item>zGallery</item>
+        <item>头像上传图片裁剪</item>
     </string-array>
 
     <!-- index 3-->
@@ -75,11 +76,9 @@
     <string-array name="scroll_index_item">
         <item>小红书</item>
         <item>RecyclerView监听滑动</item>
-        <item>LF仿地图上拉控件</item>
         <item>仿地图上拉控件</item>
         <item>美团锚定控件</item>
         <item>PullToZoom</item>
-        <item>CatchesMap</item>
     </string-array>
 
     <!-- index 7-->
