--- a/map/src/main/res/layout/activity_main.xml
+++ b/map/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".act.MapMainActivity">
+    tools:context=".base.act.MapMainActivity">
 
     <TextView
         android:layout_width="wrap_content"
