--- a/map/src/main/res/layout/activity_catches.xml
+++ b/map/src/main/res/layout/activity_catches.xml
@@ -2,17 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <fragment
-        android:id="@+id/map"
-        class="com.amap.api.maps2d.SupportMapFragment"
+        android:id="@+id/mapFragment"
+        class="com.transcendence.map.view.MapViewFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <include layout="@layout/activity_catches_new_map_control" />
+    <!--<include layout="@layout/activity_catches_new_map_control" />-->
 
 
     <com.transcendence.map.catches.view.ScrollLayoutLiuF
@@ -43,8 +44,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <include layout="@layout/activity_catches_new_map_search" />
 
@@ -59,17 +59,17 @@
         android:id="@+id/searchHere"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:alpha="0.95"
+        android:background="#ffffff"
+        android:gravity="center_horizontal"
+        android:paddingBottom="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_10"
         android:text="搜索这里"
         android:textColor="@color/orange"
         android:textSize="@dimen/size_16"
-        android:paddingTop="@dimen/dp_10"
-        android:paddingBottom="@dimen/dp_10"
-        android:gravity="center_horizontal"
-        android:background="#ffffff"
-        android:alpha="0.95"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 
 </RelativeLayout>
