--- a/map/src/main/res/layout/activity_catches_new_map_search.xml
+++ b/map/src/main/res/layout/activity_catches_new_map_search.xml
@@ -5,109 +5,15 @@
     android:alpha="0.92"
     android:orientation="vertical">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000" />
-    <!-- 钓点列表-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/searchLay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="8.5"
-                android:background="#00000000" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2">
-
-                <TextView
-                    android:id="@+id/searchNoData"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:gravity="center_horizontal"
-                    android:paddingLeft="@dimen/dp_10"
-                    android:paddingRight="@dimen/dp_10"
-                    android:text="搜索区域无数据" />
-            </RelativeLayout>
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/mRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="@dimen/dp_50"
-            android:scrollbars="vertical" />
-
-    </RelativeLayout>
-
-
-    <!-- 没有实际意义占位获取事件-->
     <RelativeLayout
         android:id="@+id/searchCountRel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/dp_5"
-        android:paddingRight="@dimen/dp_5">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
-        <RelativeLayout
-            android:id="@+id/searchEtLay"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_35"
-            android:layout_toLeftOf="@id/searchCancel"
-            android:background="@drawable/catches_bg_search_edit"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/searchEt"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_35"
-                android:layout_centerVertical="true"
-                android:layout_marginBottom="@dimen/dp_5"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:layout_marginRight="@dimen/dp_5"
-                android:layout_toLeftOf="@id/searchDelIcon"
-                android:background="@null"
-                android:cursorVisible="true"
-                android:drawableLeft="@mipmap/search_gray"
-                android:drawablePadding="@dimen/dp_5"
-                android:gravity="center_vertical"
-                android:hint="搜索地点"
-                android:imeOptions="actionSearch"
-                android:inputType="text"
-                android:maxLines="1"
-                android:paddingLeft="@dimen/dp_10"
-                android:paddingRight="@dimen/dp_10"
-                android:textColor="@color/white"
-                android:textColorHint="@color/darkgrey"
-                android:textCursorDrawable="@drawable/color_cursor"
-                android:textSize="@dimen/size_14" />
-
-            <ImageView
-                android:id="@+id/searchDelIcon"
-                android:layout_width="@dimen/dp_25"
-                android:layout_height="@dimen/dp_25"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:src="@mipmap/close"
-                android:visibility="gone" />
-        </RelativeLayout>
 
         <TextView
             android:id="@+id/searchCancel"
@@ -115,12 +21,58 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="@string/cancel"
-            android:textColor="@color/colorTheme"
+            android:textColor="@color/orange"
             android:textSize="@dimen/size_16"
             android:visibility="gone" />
 
+        <RelativeLayout
+            android:id="@+id/searchEtLay"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_toLeftOf="@id/searchCancel"
+            android:background="@drawable/catches_bg_search_edit"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/searchDelIcon"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:src="@mipmap/close"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/searchEt"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/searchDelIcon"
+                android:background="@null"
+                android:cursorVisible="true"
+                android:drawableLeft="@mipmap/search_gray"
+                android:drawablePadding="@dimen/dp_5"
+                android:gravity="center_vertical"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:textColor="@color/white"
+                android:textColorHint="@color/text_gray_light"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:textSize="@dimen/size_14" />
+        </RelativeLayout>
+
     </RelativeLayout>
+
+
 </LinearLayout>
