--- a/map/src/main/res/layout/activity_map_amap_locationsource.xml
+++ b/map/src/main/res/layout/activity_map_amap_locationsource.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <com.amap.api.maps2d.MapView
+    <com.amap.api.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
