--- a/map/src/main/res/layout/fragment_map_basic_amap.xml
+++ b/map/src/main/res/layout/fragment_map_basic_amap.xml
@@ -3,4 +3,4 @@
     android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    class="com.amap.api.maps2d.SupportMapFragment" />
+    class="com.amap.api.maps.SupportMapFragment" />
