--- a/wan/src/main/res/layout/fragment_home.xml
+++ b/wan/src/main/res/layout/fragment_home.xml
@@ -75,8 +75,8 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
