--- a/wan/src/main/res/layout/activity_wan_splash.xml
+++ b/wan/src/main/res/layout/activity_wan_splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/clContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.transcendence.wan.main.act.WanMainActivity">
+    tools:context="com.transcendence.wan.module.main.act.WanMainActivity">
 
     <ImageView
         android:id="@+id/ivLauncher"
