--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -16,6 +16,11 @@
 -->
 
 <resources>
+    <string-array name="index_item">
+        <item>主index</item>
+        <item>玩安卓</item>
+    </string-array>
+
     <string-array name="app_index_item">
         <item>0 Main</item>
         <item>1 开发基础</item>
@@ -101,7 +106,7 @@
     </string-array>
 
 
-    <string-array name="index_item">
+    <string-array name="last_index_item">
         <item>Main</item>
         <item>鸣谢</item>
         <item>Toast</item>
