--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -19,6 +19,7 @@
     <string-array name="index_item">
         <item>主index</item>
         <item>玩安卓</item>
+        <item>高德地图</item>
     </string-array>
 
     <string-array name="app_index_item">
