--- a/app/src/main/res/layout/activity_demo_didi_splash.xml
+++ b/app/src/main/res/layout/activity_demo_didi_splash.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/splash_message"
+            android:text="@string/didi_splash_message"
             android:textSize="@dimen/small_text"
             android:textColor="@color/text_99"
             android:layout_gravity="center_horizontal"/>
