--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,4 +18,14 @@
         <attr name="background" format="reference"/>
         <attr name="blockBackground" format="reference"/>
     </declare-styleable>
+
+
+
+    <declare-styleable name="PersonalScrollView">
+        <attr name="header" format="reference" />
+        <attr name="headerHeight" format="dimension" />
+        <attr name="headerVisibleHeight" format="dimension" />
+    </declare-styleable>
+
+
 </resources>
